[package]
name = "chk"
version = "1.0.0"
authors = ["Ella Mae <ellaammae@email.com>"]
edition = "2024"
description = "The guided, locked-down layer of Pelican UI for consistent, reliable RAMP interfaces."
license = "BSD-3-Clause"
repository = "https://github.com/ramp-stack/chk"
readme = "README.md"
documentation = "https://docs.rs/chk"

[lib]
name = "chk"
path = "src/lib.rs"

[dependencies]
serde = "1.0.219"
pelican_ui = {version="2.1.3"}
ramp = {package="ramp2", version="../ramp"}
chrono = "0.4.42"
downcast-rs = "2.0.1"
dyn-clone = "1.0.20"
anyanymap = "1.0.2"
include_dir = "0.7.4"
